syntax = "proto3";

package pb;

// 返佣
message RebateList {
    // 有效打码
    double validBet = 1;
    // 返佣金额
    double rebate = 2;
    // 时间
    int64 createTime = 3;
}

// 返佣返回结构体
message RebateListResp {
    // 推广人数
    int64 spreadNum = 1;
    // 推广金额
    double spreadMoney = 2;
    // 返佣历史
    repeated RebateList list = 3;
    // 总条数
    int64 totalNum = 4;
    // 返佣比例
    repeated ProportionResp protion = 5;
}

// SiteMemberSpreadProportionResp 站点会员返利比例
message ProportionResp {
    // 名称
    string name = 1;
    // 子集
    repeated RebateSetPlatformResp child = 4;
}

// SiteMemberRebateSetPlatformResp 站点会员返利比例返回结构体
message RebateSetPlatformResp {
    // 返利金额
    double validMoney = 1;
    // 比例
    double rate = 2;
}


message MemberRebateReportResp {
    // 彩票投注
    double cpBet = 1;
    // 棋牌投注
    double qpBet = 2;
    // 电子投注
    double dzBet = 3;
    // 捕鱼投注
    double byBet = 4;
    // 体育投注
    double tyBet = 5;
    // 视讯投注
    double sxBet = 6;
    // 个人返佣
    double rebate = 7;
    // 推广人数
    int64 spreadNum = 8;
    // 新增推广
    int64 newSNum = 9;
    // 投注人数
    int64 betNum = 10;
    // 充值金额
    double recharge = 11;
    // 提现金额
    double withdraw = 12;
    // 报表返佣
    double bbRebate = 13;
    // 投注返佣
    double tzRebate = 14;
    // 总投注额
    double betAll = 15;
}

// 会员下级报表集合
message AllNextReport {
    repeated MemberRebateNextReport list = 1;
}

// 会员下级报表
message MemberRebateNextReport {
    // 账号
    string account = 1;
    // 推广人数
    int64 num = 2;
    // 报表盈收
    double win = 3;
    // 投注总额
    double bet = 4;
    // 返佣贡献
    double rebate = 5;
    // 自身返佣
    double self = 6;
    // 最后登录时间
    int64 last = 7;
}

// 推广统计传参
message SpreadCountReq {
    //  @inject_tag: valid:"Must;Min(1);Max(6);ErrorCode(12079)""
    int64 dayType = 1; // 时间
}